# GroupRAG

./: .env.template  .gitignore  .pylintrc  Dockerfile  LICENCE  README.md  config.py  deploy.py  main.py  mypy.ini  pyproject.toml  requirements.txt
chroma/: docker-compose.yml
gossipbao/: __init__.py  config.py  gossipbao.py  utils.py
gossipbao/embedder/: base_embedder.py  openai_embedder.py
gossipbao/generator/: base.py  claude_generator.py  gemini_generator.py  openai_generator.py  schema.py
gossipbao/rag_checker/: __init__.py  openai_checker.py
gossipbao/schema/: message.py  vector.py
gossipbao/vector_store/: vector_store.py
group_ragger/: __init__.py  group_ragger.py
group_ragger/embedder/: __init__.py  base_embedder.py  openai_embedder.py
group_ragger/generator/: __init__.py  base.py  claude_generator.py  gemini_generator.py  openai_generator.py
group_ragger/rag_checker/: __init__.py  base.py  gemini_checker.py  openai_checker.py
group_ragger/schema/: __init__.py  group.py  message.py  rag_check.py  vector.py
group_ragger/vector_store/: __init__.py  base.py  qdrant_vector_store.py
qdrant/: run_docker.sh
scripts/: build_docker.sh  create_collection.py  run_dev.sh  run_docker.sh  run_prod.sh
src/: chroma_client.py  config.py  create_collection.py  deploy.py  llama.py  main.py  test.py  utils.py
src/embedder/: __init__.py
src/generator/: __init__.py  openai_generator.py
src/rag_checker/: openai_checker.py
streamlit_app/: main.py
tests/: test_gemini.py  test_rag_checker.py  test_utils.py  test_vector_store.py
(+5 files in other folders)
